tests/http/requests/invalid/chunked_13.py
from web_server.errors import InvalidChunkSize

request = InvalidChunkSize
